Env variables added for dev and prod